# tolaria

./: .gitignore  AGENTS.md  eslint.config.js  index.html  package.json  playwright.config.ts  playwright.smoke.config.ts  pnpm-lock.yaml  vite.config.ts
.husky/: pre-commit  pre-push
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/: lms-hs-mcp-bridge.py  lms_hs_mcp_bridge_test.py  study-space-hs-mcp-bridge.py
src-tauri/resources/agent-docs/: AGENTS.md  all.md  concepts.md  guides.md  index.md  reference.md  search-index.json  start.md  troubleshooting.md
src-tauri/src/: claude_cli.rs  claude_invocation.rs  cli_agent_runtime.rs  codex_cli.rs  gemini_cli.rs  gemini_config.rs  kiro_cli.rs  lib.rs  linux_appimage.rs  lms_dashboard.rs  main.rs  mcp.rs  menu.rs  opencode_config.rs  pi_cli.rs  pi_config.rs  settings.rs  study_space_reservation.rs  telemetry.rs  vault_list.rs  vault_watcher.rs
src-tauri/src/commands/: ai.rs  git.rs  lms.rs  mod.rs  study_space.rs  study_space_reservation.rs  system.rs  vault.rs
src-tauri/src/frontmatter/: ops.rs
src-tauri/src/git/: clone.rs  commit.rs  conflict.rs  connect.rs  credentials.rs  mod.rs  pulse.rs
src-tauri/src/mcp/: extraction.rs  opencode.rs  paths.rs
src-tauri/src/vault/: cache.rs  config_seed.rs  entry.rs  file.rs  folders.rs  getting_started.rs  migration.rs  mod.rs  parsing.rs  path_identity.rs  rename.rs  rename_transaction.rs  view_migration.rs  view_tests.rs
src-tauri/tests/: study_space_security_contract.rs
(+393 files in other folders)
